apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helm
---
apiVersion: v1
kind: Namespace
metadata:
  name: plain
